--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile project(path: ':volley')
+    compile files('libs/jsoup-1.9.2.jar')
 }
 
 buildscript {
