--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".ActivityLogin"
             android:label="@string/title_activity_login"
@@ -21,7 +20,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ActivityMain"
             android:label="@string/title_activity_main"
@@ -31,7 +29,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.al.sibirski.ActivityLogin" />
         </activity>
-
         <activity
             android:name=".ActivityLoan"
             android:label="@string/title_activity_loan"
@@ -41,7 +38,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.al.sibirski.ActivityMain" />
         </activity>
-
+        <activity
+            android:name=".ActivityDetail"
+            android:label="@string/title_activity_detail"
+            android:parentActivityName=".ActivityMain"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.al.sibirski.ActivityMain" />
+        </activity>
     </application>
 
 </manifest>
