--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         <activity
             android:name=".ActivityLogin"
             android:label="@string/title_activity_login"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,7 +25,8 @@
             android:name=".ActivityMain"
             android:label="@string/title_activity_main"
             android:parentActivityName=".ActivityLogin"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.al.sibirski.ActivityLogin" />
@@ -33,7 +35,8 @@
             android:name=".ActivityLoan"
             android:label="@string/title_activity_loan"
             android:parentActivityName=".ActivityMain"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.al.sibirski.ActivityMain" />
@@ -42,7 +45,8 @@
             android:name=".ActivityDetail"
             android:label="@string/title_activity_detail"
             android:parentActivityName=".ActivityMain"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.al.sibirski.ActivityMain" />
