--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,42 @@
+//buildscript {
+//    repositories {
+//        jcenter()
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:2.1.2'
+//
+//        // NOTE: Do not place your application dependencies here; they belong
+//        // in the individual module build.gradle files
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        jcenter()
+//    }
+//}
+
+buildscript {
+    repositories {
+        jcenter()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
+    }
+}
+
+// Required because retrolambda is on maven central
+repositories {
+    mavenCentral()
+    jcenter()
+}
+
+
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
@@ -33,24 +71,13 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
-    compile project(path: ':volley')
+//    compile project(path: ':volley')
+    compile 'com.android.volley:volley:1.0.0'
     compile files('libs/jsoup-1.9.2.jar')
 }
 
-buildscript {
-    repositories {
-        mavenCentral()
-    }
 
-    dependencies {
-        classpath 'me.tatarka:gradle-retrolambda:3.3.0-beta4'
-    }
-}
 
-// Required because retrolambda is on maven central
-repositories {
-    mavenCentral()
-}
-
-apply plugin: 'com.android.application' //or apply plugin: 'java'
-apply plugin: 'me.tatarka.retrolambda'
+//apply plugin: 'com.android.application' //or apply plugin: 'java'
+//apply plugin: 'me.tatarka.retrolambda'
+//
